--- a/Changes
+++ b/Changes
@@ -1,3 +1,4 @@
-0.001   2017-08-13 (PERLANCAR)  Released-By: unreleased
+0.001   2017-08-13  Released-By: PERLANCAR; Released: no
 
         - First release.
+
