--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.004   2020-05-06  Released-By: PERLANCAR; Urgency: medium
+
+	- Use DBIx::Util::Schema instead of DBIx::Diff::Schema now.
+
+
 0.003   2020-04-23  Released-By: PERLANCAR; Urgency: medium
 
 	- Remove option --action.
